page_using_table

--- a/layout_using_table.html
+++ b/layout_using_table.html
@@ -16,18 +16,17 @@
 	<body>
 		<table style="width:100%">
 			<tr>
-				<td style="background-color:gray" colspan="10"><em>Web Layout using Tables</em>
+				<td align="center" style="background-color:gray" colspan="10"><em>Web Layout using Tables</em>
 			</tr>
 			<tr>
 				<th style="background-color:white" colspan="10"><em><marquee>This is information bar</marquee></em>
 			</tr>
 			<tr>
-				<td style="width:50px;height:600px;background:teal"></td>
-				<td style="width:80px; height:600px; background:green"></td>
-				<td style="width:800px; height:600px; background:blue"></td>
-				<td style="width:30px; height:550px; background:red"></td>
+				<td align="center" style="width:80px; height: 540px; background:green"><em><strong>Left<br>Side Bar</strong></em></td>
+				<td align="center" style="width:600px; height:540px; background:blue"><em><strong>Space for Article</strong></em></td>
+				<td align="center" style="width:80px; height: 540px; background:red"><em><strong>Right<br>Side Bar</strong></em></td>
 			<tr>
-				<th colspan="3" style="width:100%;height:100px;background:white" >This is Footer</th>
+				<th colspan="3" style="width:100%;height:70px;background:white" >This is Footer</th>
 			</tr>
 		</table>
 	</body>
